# RealTime_MultiCurrency_PG_go

./: .dockerignore  .env  Makefile  README.md  README_GRPC.md  aaa  clean-start.sh  complete_list.txt  files.txt  filestructure  folders.txt  go.mod  go.sum  main.go  mysignature  output.txt  size_analysis.txt  structure.txt
cmd/fx-grpc/: main.go
cmd/payments-grpc/: main.go
cmd/payments-worker/: main.go
cmd/risk-grpc/: main.go  main.goZone.Identifier
cmd/wallet-grpc/: main.go
common/v1/: common.pb.go
data/: transactions.csv
deployments/compose/: docker-compose.dev.v2.yaml.txt  docker-compose.dev.v3.yaml  docker-compose.dev.yaml
deployments/docker/: Dockerfile  Dockerfile.api-gateway  Dockerfile.db-rs  Dockerfile.go-svc  Dockerfile.payments-rs  Dockerfile.rust
deployments/k8s/: api-gateway.yaml  fx.yaml  payments.yaml  risk.yaml  wallet.yaml
fx/v1/: fx.pb.go  fx_admin.pb.go  fx_grpc.pb.go
grafana/: grafana_payment_gateway_dashboard.json
grafana/provisioning/: payment_poc.json
internal/grpcserver/: fx.go  payments.go  risk.go  wallet.go
payments/v1/: payments.pb.go
pkg/errors/: errors.go
pkg/metrics/: metrics.go
pkg/proto/: fx.proto  payments.proto
pkg/tracing/: doc.go
prometheus/: prometheus.yml
seeds/: customers.json  fx_rates.json  risk_rules.json  wallet_accounts.json
services/api-gateway/: fx_client.go  main.go
services/db-rs/: Cargo.toml  build.rs
services/db-rs/src/: db.rs  handlers.rs  main.rs  repo.rs  schema.sql  store.rs
services/fx/: main.go
services/fx-grpc/: main.go
services/payments/: main.go
services/payments-grpc/: main.go
services/payments-rs/: Cargo.toml  build.rs
services/payments-rs/src/: idempo.rs  main.rs
services/risk/: main.go
services/risk-grpc/: main.go  service.go
services/wallet/: main.go
tests/data/: dummy_transactions.csv
tests/e2e/: payment_grpc_from_csv.js  payment_grpc_test.js  payment_load.js  payment_load_from_csv.js
tests/integration/: load_from_csv_test.go  (+1 more)
tools/: generate_dummy_data.py  generate_transaksi.py  generate_wallets.py
(+20 files in other folders)
