[package]
name = "payments-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1.37", features = ["macros","rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4"] }
prometheus = "0.13"
hyper = { version = "0.14", features = ["server","http1"] }

[build-dependencies]
tonic-build = "0.12"
